# sounder

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: README.md  sounder-local.tape
examples/: make_s3_fixtures.rs
packaging/homebrew/: sounder.rb
scripts/: s3-integration-test.sh
src/: errors.rs  main.rs  redaction.rs
tests/golden/: check_schema_drift.agent.json  check_schema_drift.markdown  check_schema_drift.report.json  inspect_healthy.agent.json  inspect_healthy.markdown  inspect_healthy.report.json
